test_regress/t/t_udp_bad.out
%Error: t/t_udp.v:104:4: Unsupported: Verilog 1995 UDP Tables.  Use --bbox-unsup to ignore tables.
   table
   ^~~~~
%Error: Exiting due to
